--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "jest-cli": "^22.4.3",
     "mobx": "^4.1.0",
     "mobx-react": "^5.0.0",
     "object-assign": "4.1.1",
